Empezando la segunda ley de la termodinamica

--- a/apuntes/fisica2/termodinamica/resumen.tex
+++ b/apuntes/fisica2/termodinamica/resumen.tex
@@ -112,13 +112,13 @@
 
   \section{Temperatura y calor}
   \subsection{Temperatura y equilibrio térmico}
-  Los cuerpos que se sienten calientes suelen tener una \textbf{temperatura} mas alta que un cuerpo similar que se siente frío. Sin embargo, esta definición es bastante vaga y los sentidos pueden engañarse.
+  Los cuerpos que se sienten calientes suelen tener una \textbf{temperatura} más alta que un cuerpo similar que se siente frío. Sin embargo, esta definición es bastante vaga y los sentidos pueden engañarse.
 
   Para usar la temperatura como medida de calidez necesitamos construir una escala de temperatura. Para esa escala podemos usar cualquier propiedad que podamos medir y que sepamos que varía frente al cambio de temperatura. Por ejemplo, existen los termómetros de mercurio, que es un metal que a temperatura ambiente se encuentra en estado líquido, y al aumentar su temperatura, aumenta su volumen. Otro ejemplo puede ser la presión medida por un manómetro al aumentar o disminuir la temperatura de un gas encerrado en un recipiente de volumen constante. Estas propiedades (volumen y presión) nos dan un número $ (v,p) $ que varía con la calidez y la frialdad, así que pueden usarse para hacer un \textbf{termómetro}.
 
   Para medir la temperatura de un cuerpo ponemos el termómetro en contacto con él, de manera que se produzca un intercambio de calor entre ambos. Si medimos la temperatura de una taza de café caliente, la taza se va a enfriar un poco y el termómetro se va a calentar hasta que ambos estén a la misma temperatura y ya no varíe la temperatura de ninguno de los dos. En ese momento podemos leer la temperatura del termómetro. Ese estado de equilibrio se llama \textbf{equilibrio térmico}.
 
-  Si dos sistemas están separados por un material \textbf{aislante}, se afectan mutuamente con mas lentitud. Un \textit{aislante ideal} es un material que no permite la interacción entre los dos sistemas.
+  Si dos sistemas están separados por un material \textbf{aislante}, se afectan mutuamente con más lentitud. Un \textit{aislante ideal} es un material que no permite la interacción entre los dos sistemas.
 
   \subsection{Ley cero de la termodinámica}
   Dados tres sistemas $ A,B,C $ que inicialmente no están en equilibrío térmico. Si separamos $ A $ y $ B $ con una pared aislante ideal, pero dejamos que $ C $ interactúe tanto con $ A $ como con $ B $, al llegar $ A $ y $ C $ al equilibrio térmico y $ B $ y $ C $ al equilibrio térmico, entonces $ A $ y $ B $ se encontrarán en equilibrio térmico también.
@@ -132,7 +132,7 @@
 
     \item \textbf{Escala Farenheit (°F)}: La temperatura de congelación del agua es 32 °F y la de ebullición es de 212 °F a una presión de una atmósfera.
 
-    \item \textbf{Escala Kelvin (°K)}: Para entender la escala Kelvin conviene saber cómo surgió. La idea era conseguir una escala que no dependa de las propiedades de ningún material para tener una escala absoluta. Se hicieron entonces experimentos con un \textit{termómetro de gas}, que es el termómetro que mas se acerca al ideal y se observó lo siguiente.
+    \item \textbf{Escala Kelvin (°K)}: Para entender la escala Kelvin conviene saber cómo surgió. La idea era conseguir una escala que no dependa de las propiedades de ningún material para tener una escala absoluta. Se hicieron entonces experimentos con un \textit{termómetro de gas}, que es el termómetro que más se acerca al ideal y se observó lo siguiente.
 
       El principio de un termómetro de gas muestra que la presión de un gas a volumen constante aumenta con la termperatura. Lo que se hizo entonces fue medir la presión de distintos gases a 0 °C y 100 °C de manera que para cada gas se podían graficar dos puntos en un eje de $ (temperatura, presion) $, y unirlos con una linea. Se encontró así que todos los gases probados tenían rectas diferentes, pero todas convergían en una temperatura hipotética de -273.15 °C, en la que la presión absoluta del gas sería cero. 
 
@@ -194,7 +194,7 @@
   Si metemos una cuchara fría en una taza con café caliente, la cuchara se calienta y el café se enfría para establecer el equilibrio térmico. Esto se debe a que hay un transferencia de energía de un sistema al otro. La transferencia de energía que se da exclusivamente por una diferencia de temperatura se denomica \textit{flujo de calor} o \textit{transferencia de calor}, y la energía transferencia es lo que llamamos \textbf{calor}.
 
   \subsubsection{Calor específico}
-  Usamos el símbolo $ Q $ para cantidad de calor. cuando el calor está asociado a un cambio de temperatura infinitesimal $ dT $, lo llamamos $ dQ $. L a cantidad de calor $ Q $ necesaria para elevar la temperatura de una masa $ m $ de cierto material de $ T_{1} $ a $ T_{2} $ es aproximadamente proporcional al cambio de temperatura $ \Delta T $ y a la masa $ m $ del material. Cada material requiere distintas cantidades de energía para elevar su temperatura, por lo que a la ecuación se le agrega una constante $ c $ llamada \textbf{calor específico}:
+  Usamos el símbolo $ Q $ para cantidad de calor. cuando el calor está asociado a un cambio de temperatura infinitesimal $ dT $, lo llamamos $ dQ $. L a cantidad de calor $ Q $ necesaria para elevar la temperatura de una mása $ m $ de cierto material de $ T_{1} $ a $ T_{2} $ es aproximadamente proporcional al cambio de temperatura $ \Delta T $ y a la mása $ m $ del material. Cada material requiere distintas cantidades de energía para elevar su temperatura, por lo que a la ecuación se le agrega una constante $ c $ llamada \textbf{calor específico}:
   \[
   Q = mc\Delta T
   \]
@@ -206,7 +206,7 @@
   }}\vspace{0.2cm}
 
   \subsubsection{Capacidad calorífica molar}
-  A veces es mas útil describir una cantidad de sustancia en términos del número de moles $ n $, en vez de la masa $ m $ del material. Recordemos que la masa $ m $ de un material y su número de moles están relacionados por la siguiente ecuación $ m = nM $ donde $ M $ es la masa molar. De esta manera podemos sustituir $ m $ en la ecuación del calor:
+  A veces es más útil describir una cantidad de sustancia en términos del número de moles $ n $, en vez de la mása $ m $ del material. Recordemos que la mása $ m $ de un material y su número de moles están relacionados por la siguiente ecuación $ m = nM $ donde $ M $ es la mása molar. De esta manera podemos sustituir $ m $ en la ecuación del calor:
   \[
   Q = nMc\Delta T
   \]
@@ -216,7 +216,7 @@
   Q = nC\Delta T
   \]
 
-  En sólidos, las mediciones de calor específico se suelen hacer a presión atmosférica constante; los valores correspondientes se llaman \textit{calor específico} y \textit{capacidad calorífica molar a presión constante}, denotados con $ c_{p} $ y $ C_{p} $. En el caso de un gas, es mas fácil mantener el volumen constante; los valores correspondientes son \textit{calor específico} y \textit{capacidad calorífica molar a volumen constante}, denotados con $ c_{v} $ y $ C_{v} $ respectivamente. Para una sustancia dada, $ C_{v} $ y $ C_{p} $ son diferentes. Si el sistema puede expandirse al agregar calor, hay un intercambio adicional de energía porque el sistema efectúa \textit{trabajo} sobre su entorno. Si el volumen es constante, el sistema no efectúa trabajo. 
+  En sólidos, las mediciones de calor específico se suelen hacer a presión atmosférica constante; los valores correspondientes se llaman \textit{calor específico} y \textit{capacidad calorífica molar a presión constante}, denotados con $ c_{p} $ y $ C_{p} $. En el caso de un gas, es más fácil mantener el volumen constante; los valores correspondientes son \textit{calor específico} y \textit{capacidad calorífica molar a volumen constante}, denotados con $ c_{v} $ y $ C_{v} $ respectivamente. Para una sustancia dada, $ C_{v} $ y $ C_{p} $ son diferentes. Si el sistema puede expandirse al agregar calor, hay un intercambio adicional de energía porque el sistema efectúa \textit{trabajo} sobre su entorno. Si el volumen es constante, el sistema no efectúa trabajo. 
 
   \subsubsection{Cambios de fase}
   Usamos el término \textbf{fase} para describir un estado específico de la materia, como sólido, líquido o gas. Una transición de una fase a otra es un \textbf{cambio de fase}. Para una presión dada, lso cambios de fase se dana una temperatura definida, generalmente acompañada por absorción o emisión de calor, y un cambio de volumen y densidad.
@@ -251,7 +251,7 @@
   \]
 
   \subsection{Graficas pV}
-  Las gráficas de la relación $ p $-$ V $-$ T $ en realidad se representan como superficies ya que tenemos tres variables. Sin embargo, podemos usar curvas de nivel para representar las gráficas de forma bidimensional, suele ser mas útil. Una de las gráficas bidimensionales mas usadas es la \textbf{gráfica pV}, que expresa la presión en fucnión del volumen, en la que cada curva representa el comportamiento del gas a temperatura constante. Dichas curvas se denominan \textbf{isotermas}.
+  Las gráficas de la relación $ p $-$ V $-$ T $ en realidad se representan como superficies ya que tenemos tres variables. Sin embargo, podemos usar curvas de nivel para representar las gráficas de forma bidimensional, suele ser más útil. Una de las gráficas bidimensionales más usadas es la \textbf{gráfica pV}, que expresa la presión en fucnión del volumen, en la que cada curva representa el comportamiento del gas a temperatura constante. Dichas curvas se denominan \textbf{isotermas}.
 
   \begin{figure}[H]
     \centering
@@ -275,7 +275,7 @@
   N_{A} = 6.02214199\times 10^{23}\frac{\text{moléculas}}{\text{mol}}
   \]
 
-  La masa molar $ M $ de un compuesto es la masa de un mol:
+  La mása molar $ M $ de un compuesto es la mása de un mol:
   \[
   M = N_{A}m
   \]
@@ -284,13 +284,13 @@
   La idea es armar un modelo sencillo del gas ideal para poder predecir la capacidad caloríficar molar de un gas ideal.
   Para nuestro \textit{modelo cinético molecular} vamos a suponer lo siguiente:
   \begin{enumerate}[1.]
-    \item Un recipiente con volumen $ V $ contiene un número muy grande $ N $ de moléculas idénticas, cada una con masa $ m $.
+    \item Un recipiente con volumen $ V $ contiene un número muy grande $ N $ de moléculas idénticas, cada una con mása $ m $.
 
     \item Las moléculas se comportan como partículas puntuales; su tamaño es pequeño en compración con la distancia media entre pertículas y las dimensiones del recipiente.
 
     \item Las moléculas están en constante movimiento, y obedecen las leyes del movimiento de Newton. Las  moléculas chocan ocasinalmente con las paredes del recipiente. Tales chocques son perfectamente elásticos.
 
-    \item Las paredes del recipiente son perfectamente rígidas y con mas infinita; no se mueven.
+    \item Las paredes del recipiente son perfectamente rígidas y con más infinita; no se mueven.
   \end{enumerate}
 
   \subsubsection{Colisiones y presión del gas}
@@ -444,7 +444,7 @@
   Al igual que el trabajo, el calor agregado a un sistema termodinámico cuando cambia de estado depende de la trayectoria del estado inicial al final.
 
   \subsection{Energía interna y la primera ley de la termodinámica}
-  La energía interna de un sistema es la suma de las energías cinéticas de todas sus partículas constituyentes, mas la suma de todas las energías potenciales de interacción entre ellas. Es importante notar que esta energía potencial es solo la que existe entre las partículas del sistema y no la que existe en relación a su entorno. Por ejemplo, si tenemos una pelota en el piso va tener una cierta cantidad de energía interna. Si subimos la pelota a una mesa, aumenta la energía potencial de la pelota debido a la interacción entre la pelota y la Tierra, pero la energía interna de la pelota sigue siendo la misma, no cambió.
+  La energía interna de un sistema es la suma de las energías cinéticas de todas sus partículas constituyentes, más la suma de todas las energías potenciales de interacción entre ellas. Es importante notar que esta energía potencial es solo la que existe entre las partículas del sistema y no la que existe en relación a su entorno. Por ejemplo, si tenemos una pelota en el piso va tener una cierta cantidad de energía interna. Si subimos la pelota a una mesa, aumenta la energía potencial de la pelota debido a la interacción entre la pelota y la Tierra, pero la energía interna de la pelota sigue siendo la misma, no cambió.
 
   Usamos el símbolo $ U $ para la energía interna. Durante un cambio de estado del sistema, la energía interna podria variar de un valor inicial $ U_{0} $ a un valor final $ U_{f} $. Denotamos este cambio de energía interna como $ \Delta U = U_{f} - U_{0} $.
 
@@ -522,7 +522,7 @@
   Ya habíamos hablado de la capacidad calorífica molar y que esta dependía de las condiciones en que se agrega calor. Podíamos medirla a volumen constante $ C_{V} $, o a presión constante $ C_{p} $. Pero, ¿por qué son diferentes estas dos capacidades caloríficas? Esto se debe a la primer ley de la termodinámica. Si aumenta la temperatura a volumen constante, el sistema no efectúa trabajo y el cambio de enrgía interna $ \Delta U $ es igaul al calor agregado $ Q $. En un aumento de temperatura a presión constante, en cambio, el volumen tiene que aumentar; sino la presión no podría permanecer constante. Al expandirse el material, realiza un trabajo $ W $, y como $ \Delta U = Q - W $, el suministro de calor en un proceso a presión constante debe ser mayor que en uno a volumen constante, porque se requiere energía adicional para el trabajo $ W $ realizado durante la expansión. Así, $ C_{p} $ del gas ideal es mayor que $ C_{V} $.
 
   \subsubsection{Relación entre las dos capacidades caloríficas para un gas ideal}
-  Podemos deducir una relación sencilla entre $ C_{p} $ y $ C_{V} $ para el gas ideal. Consideremos priemro el proceso de volumen constante. Colocamos $ n $ moles de gas ideal a temperatura $ T $ en un recipiente de volumen constante, que colocamos en contacto térmico con un cuerpo mas caliente; una cantidad infinitesimal de calor $ dQ $ fluye hacie el gas, y su temperatura aumenta en una cantidad infinitesimal $ dT $. Por la definición de $ C_{V} $, la capacidad calorífica molar a volumen constante,
+  Podemos deducir una relación sencilla entre $ C_{p} $ y $ C_{V} $ para el gas ideal. Consideremos priemro el proceso de volumen constante. Colocamos $ n $ moles de gas ideal a temperatura $ T $ en un recipiente de volumen constante, que colocamos en contacto térmico con un cuerpo más caliente; una cantidad infinitesimal de calor $ dQ $ fluye hacie el gas, y su temperatura aumenta en una cantidad infinitesimal $ dT $. Por la definición de $ C_{V} $, la capacidad calorífica molar a volumen constante,
   \[
   dQ = nC_{V}dT
   \]
@@ -532,7 +532,7 @@
   dU = nC_{V}dT
   \]
 
-  Supongamos ahora un proceso a presión constante con el mismo cambio de temperatura $ dT $. Colocamos el mismo gas en un cilindro con un postón que permitimos moverse apenas lo suficiente para mantener una presión constante y ponemos el sistema en constacto con un cuerpo mas caliente. Al fluir calor hacia el gas, se expande a presión constante y efectúa trabajo. Por la definición de $ C_{p} $, la cantidad de calor $ dQ $ que entra en el gas es 
+  Supongamos ahora un proceso a presión constante con el mismo cambio de temperatura $ dT $. Colocamos el mismo gas en un cilindro con un postón que permitimos moverse apenas lo suficiente para mantener una presión constante y ponemos el sistema en constacto con un cuerpo más caliente. Al fluir calor hacia el gas, se expande a presión constante y efectúa trabajo. Por la definición de $ C_{p} $, la cantidad de calor $ dQ $ que entra en el gas es 
   \[
     dQ = nC_{p}dT
   \]
@@ -645,6 +645,53 @@
   \]
 
   \section{La segunda ley de la termodinámica}
+  Muchos procesos termodinámicos suceden naturalmente en una dirección pero no en la opuesta. Por ejemplo, el calor siempre fluye de un cuerpo caliente a uno más frío, nunca al revés. El flujo de calor de un cuerpo frío a uno caliente no violaría la primera ley de la termodinámica si la energía total se conserva; sin embargo, esto no ocurre. La razón de este comportamiento tiene que ver con la dirección de los procesos termodinámicos y constituye la segunda ley de la termodinámica.
+
+  \subsection{Dirección de los procesos termodinámicos}
+  Todos los procesos termodinámicos que se dan en la naturaleza son \textbf{procesos irreversibles}, es decir, procesos que se realizan en una dirección pero no en otra.
+
+  A pesar de esto, podemos imaginar una clase de procesos idealizados que serían reversibles. Un sistema que sufre un \textbf{proceso reversible} idealizado siempre está \textit{muy cerca} del equilibrio termodinámico dentro de sí y con su entorno. Cualquier cambio de estado que se presente podría revertirse (hacer que procesa en el otro sentido). Decimos que está muy cerca porque si estuviese en equilibrio no habría cambio de estado, no habría flujo de calor, el sistema no se expandiría por lo que no realizaría trabajo sobre su entorno. Los procesos reversibles son una idealización que nunca puede lograrse en el mundo real.
+
+  \subsection{Máquinas térmicas}
+  Una \textbf{máquina térmica} es un dispositvo que transforma calor parcialmente en trabajo o energaía mecánica. Llamamos \textbf{sustancia de trabajo} a la cantidad de materia dentro de la máquina térmica que experimenta entrada y salida de calor, expansión y compresión, o cambios de fase. El tipo de máquina más fácil de analizar es aquel donde la sustancia de trabajo efectúa un \textbf{proceso cíclico}, es decir, una sucesión de procesos que al final deja la sustancia en el estado que inició.
+
+  \subsubsection{Fuentes fría y caliente}
+  Todas las máquinas térmicas absorben calor de una fuente a una temperatura relativamente alta, realizan un trabajo mecánico y desechan o rechazan algo de calor a una temperatura más baja. Si el sistema pasa por un proceso cíclico, sus energías internas inicial y final son la misma, por lo que $ Q = W $ debido a la primera ley de la termodinámica.
+
+  En las máquinas térmicas podemos identificar dos fuentes con las cuales la sustancia de trabajo puede interactuar. Una es la \textit{fuente caliente}, que le puede dar a ala sustancia de trabajo grandes cantidades de calor a temperatura constante $ T_{H} $ sin cambiar apreciablemente su propia temperatura. La otra es la \textit{fuenta fría}, que puede absorber grandes cantidadades de calor desechado por la máquina a una temperatura constante menor $ T_{C} $.
+
+  Las cantidades de calor transferido de las fuentes caliente y fría como $ Q_{H} $ y $ Q_{C} $ corresponden a las temperaturas $ T_{H} $ y $ T_{C} $ respectivamente.
+
+  \subsubsection{Diagramas de flujo de energía y eficiencia}
+  Podemos representar las transformaciones de energía (calor a trabajo y viceversa) en una máquina términa con el diagrama de flujo de energía de la Figura \ref{fig:diag-flujo}. 
+
+  \begin{figure}[H]
+    \centering
+    \includegraphics[width=0.5\linewidth]{imagenes/diagrama-de-flujo.png}
+    \caption{Diagrama de flujo de energía para una máquina térmica}
+    \label{fig:diag-flujo}
+  \end{figure}
+  
+  La máquina en sí se representa con un círculo. La anchura de las flechas determina la cantidad de energía transferida.
+  
+  Si la máquina repite el mismo ciclo, $ Q_{H} $ y $ Q_{C} $ representan el calor absorbido y rechazado en un ciclo. El calor neto $ Q $ es 
+  \[
+    Q = Q_{H} + Q_{C} = \left|Q_{H}\right| - \left|Q_{C}\right|
+  \]
+
+  La salida útil de la máquina es el trabajo neto $ W $ que, por la primera ley, tiene que ser igual a $ Q $
+  \[
+    W = Q = Q_{H} + Q_{C} = \left|Q_{H}\right| - \left|Q_{C}\right|
+  \]
+
+  Idealmente, nos gustaría convertir todo el calor $ Q_{H} $ en trabajo; en tal caso, tendríamos $ Q_{H} = W $ y $ Q_{C} = 0 $, pero esto es imposible en la realida. La \textbf{eficiencia térmica} de una máquina, denotada como $ e $ representa la cantidad de trabajo que puedo generar a partir de una cierta cantidad de calor $ Q_{H} $
+  \[
+  e = \frac{W}{Q_{H}} = \frac{\left|Q_{H}\right| - \left|Q_{C}\right|}{Q_{H}} = 1 - \frac{\left|Q_{C}\right|}{Q_{H}}
+  \]
+
+
+
+
 
 
 
